--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Photo Gallery</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        
+
     </body>
 </html>
