added image thumbnails and alt tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,43 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-
+        <main>
+            <section class="card">
+                <img src="images/thumbnails/01.jpg" alt="a country farm with hay bales">
+            </section>
+            <section class="card">
+                <img src="images/thumbnails/02.jpg" alt="a mountain lake in the springtime">
+            </section>
+            <section class="card">
+                <img src="images/thumbnails/03.jpg" alt="a cloudy pasture on the Irish coast">
+            </section>
+            <section class="card">
+                <img src="images/thumbnails/04.jpg" alt="a glacial mountain with iceberg lake">
+            </section>
+            <section class="card">
+                <img src="images/thumbnails/05.jpg" alt="a warm, desert canyon just before dusk">
+            </section>
+            <section class="card">
+                <img src="images/thumbnails/06.jpg" alt="a dreary, overgrown path to an abandoned gate">
+            </section>
+            <section class="card">
+                <img src="images/thumbnails/07.jpg" alt="a lively, green marsh with lush foliage">
+            </section>
+            <section class="card">
+                <img src="images/thumbnails/08.jpg" alt="the hill of a beach dune that you cannot see over just yet">
+            </section>
+            <section class="card">
+                <img src="images/thumbnails/09.jpg" alt="an overcast tunnel of vegetation">
+            </section>
+            <section class="card">
+                <img src="images/thumbnails/10.jpg" alt="an ocean sprayed, shoreline hill at dusk">
+            </section>
+            <section>
+                <img src="images/thumbnails/11.jpg" alt="views through a mountain window, looking down upon a smoky mountain valley">
+            </section>
+            <section class="card">
+                <img src="images/thumbnails/12.jpg" alt="a lavender pasture just before the base of a snowcapped mountain">
+            </section>
+        </main>
     </body>
 </html>
