--- a/index.html
+++ b/index.html
@@ -7,42 +7,45 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <main>
+        <nav id="searchbar">
+
+        </nav>
+        <main id="grid">
             <section class="card">
-                <img src="images/thumbnails/01.jpg" alt="a country farm with hay bales">
+                <img src="images/thumbnails/01.jpg" title="a country farm with hay bales" alt="a country farm with hay bales">
             </section>
             <section class="card">
-                <img src="images/thumbnails/02.jpg" alt="a mountain lake in the springtime">
+                <img src="images/thumbnails/02.jpg" title="a mountain lake in the springtime" alt="a mountain lake in the springtime">
             </section>
             <section class="card">
-                <img src="images/thumbnails/03.jpg" alt="a cloudy pasture on the Irish coast">
+                <img src="images/thumbnails/03.jpg" title="a cloudy pasture on the Irish coast" alt="a cloudy pasture on the Irish coast">
             </section>
             <section class="card">
-                <img src="images/thumbnails/04.jpg" alt="a glacial mountain with iceberg lake">
+                <img src="images/thumbnails/04.jpg" title="a glacial mountain with iceberg lake" alt="a glacial mountain with iceberg lake">
             </section>
             <section class="card">
-                <img src="images/thumbnails/05.jpg" alt="a warm, desert canyon just before dusk">
+                <img src="images/thumbnails/05.jpg" title="a warm, desert canyon just before dusk" alt="a warm, desert canyon just before dusk">
             </section>
             <section class="card">
-                <img src="images/thumbnails/06.jpg" alt="a dreary, overgrown path to an abandoned gate">
+                <img src="images/thumbnails/06.jpg" title="a dreary, overgrown path to an abandoned gate" alt="a dreary, overgrown path to an abandoned gate">
             </section>
             <section class="card">
-                <img src="images/thumbnails/07.jpg" alt="a lively, green marsh with lush foliage">
+                <img src="images/thumbnails/07.jpg" title="a lively, green marsh with lush foliage" alt="a lively, green marsh with lush foliage">
             </section>
             <section class="card">
-                <img src="images/thumbnails/08.jpg" alt="the hill of a beach dune that you cannot see over just yet">
+                <img src="images/thumbnails/08.jpg" title="the hill of a beach dune that you cannot see over just yet" alt="the hill of a beach dune that you cannot see over just yet">
             </section>
             <section class="card">
-                <img src="images/thumbnails/09.jpg" alt="an overcast tunnel of vegetation">
+                <img src="images/thumbnails/09.jpg" title="an overcast tunnel of vegetation" alt="an overcast tunnel of vegetation">
             </section>
             <section class="card">
-                <img src="images/thumbnails/10.jpg" alt="an ocean sprayed, shoreline hill at dusk">
+                <img src="images/thumbnails/10.jpg" title="an ocean sprayed, shoreline hill at dusk" alt="an ocean sprayed, shoreline hill at dusk">
             </section>
             <section>
-                <img src="images/thumbnails/11.jpg" alt="views through a mountain window, looking down upon a smoky mountain valley">
+                <img src="images/thumbnails/11.jpg" title="views through a mountain window, looking down upon a smoky valley" alt="views through a mountain window, looking down upon a smoky mountain valley">
             </section>
             <section class="card">
-                <img src="images/thumbnails/12.jpg" alt="a lavender pasture just before the base of a snowcapped mountain">
+                <img src="images/thumbnails/12.jpg" title="a lavender pasture just before the base of a snowcapped mountain" alt="a lavender pasture just before the base of a snowcapped mountain">
             </section>
         </main>
     </body>
