update img alt tags and titles

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img src="images/thumbnails/10.jpg" title="an ocean sprayed, shoreline hill at dusk" alt="an ocean sprayed, shoreline hill at dusk">
             </section>
             <section>
-                <img src="images/thumbnails/11.jpg" title="views through a mountain window, looking down upon a smoky valley" alt="views through a mountain window, looking down upon a smoky mountain valley">
+                <img src="images/thumbnails/11.jpg" title="views through a mountain window, looking down upon a smoky valley" alt="views through a mountain window, looking down upon a smoky valley">
             </section>
             <section class="card">
                 <img src="images/thumbnails/12.jpg" title="a lavender pasture just before the base of a snowcapped mountain" alt="a lavender pasture just before the base of a snowcapped mountain">
