--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <nav id="searchbar">
-
+            <input type="text" id="txtBox" placeholder="Search">
         </nav>
         <main id="grid">
             <section class="card">
