--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <section class="card">
                 <img src="images/thumbnails/10.jpg" title="an ocean sprayed, shoreline hill at dusk" alt="an ocean sprayed, shoreline hill at dusk">
             </section>
-            <section>
+            <section class="card">
                 <img src="images/thumbnails/11.jpg" title="views through a mountain window, looking down upon a smoky valley" alt="views through a mountain window, looking down upon a smoky valley">
             </section>
             <section class="card">
