--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
                 <img src="images/thumbnails/12.jpg" title="a lavender pasture just before the base of a snowcapped mountain" alt="a lavender pasture just before the base of a snowcapped mountain">
             </section>
         </main>
+        <script src="js/app.js"></script>
     </body>
 </html>
