change section tags to anchor tags

--- a/index.html
+++ b/index.html
@@ -10,43 +10,44 @@
         <nav id="searchbar">
             <input type="text" id="txtBox" placeholder="Search">
         </nav>
-        <main id="grid">
-            <section class="card">
+        <main id="grid" class="gallery">
+            <a href="images/01.jpg" class="card" data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields.
+            ">
                 <img src="images/thumbnails/01.jpg" title="a country farm with hay bales" alt="a country farm with hay bales">
-            </section>
-            <section class="card">
+            </a>
+            <a href="images/02.jpg" class="card">
                 <img src="images/thumbnails/02.jpg" title="a mountain lake in the springtime" alt="a mountain lake in the springtime">
-            </section>
-            <section class="card">
+            </a>
+            <a href="images/03.jpg" class="card">
                 <img src="images/thumbnails/03.jpg" title="a cloudy pasture on the Irish coast" alt="a cloudy pasture on the Irish coast">
-            </section>
-            <section class="card">
+            </a>
+            <a href="images/04.jpg" class="card">
                 <img src="images/thumbnails/04.jpg" title="a glacial mountain with iceberg lake" alt="a glacial mountain with iceberg lake">
-            </section>
-            <section class="card">
+            </a>
+            <a href="images/05.jpg" class="card">
                 <img src="images/thumbnails/05.jpg" title="a warm, desert canyon just before dusk" alt="a warm, desert canyon just before dusk">
-            </section>
-            <section class="card">
+            </a>
+            <a href="images/06.jpg" class="card">
                 <img src="images/thumbnails/06.jpg" title="a dreary, overgrown path to an abandoned gate" alt="a dreary, overgrown path to an abandoned gate">
-            </section>
-            <section class="card">
+            </a>
+            <a href="images/07.jpg" class="card">
                 <img src="images/thumbnails/07.jpg" title="a lively, green marsh with lush foliage" alt="a lively, green marsh with lush foliage">
-            </section>
-            <section class="card">
+            </a>
+            <a href="images/08.jpg" class="card">
                 <img src="images/thumbnails/08.jpg" title="the hill of a beach dune that you cannot see over just yet" alt="the hill of a beach dune that you cannot see over just yet">
-            </section>
-            <section class="card">
+            </a>
+            <a href="images/09.jpg" class="card">
                 <img src="images/thumbnails/09.jpg" title="an overcast tunnel of vegetation" alt="an overcast tunnel of vegetation">
-            </section>
-            <section class="card">
+            </a>
+            <a href="images/10.jpg" class="card">
                 <img src="images/thumbnails/10.jpg" title="an ocean sprayed, shoreline hill at dusk" alt="an ocean sprayed, shoreline hill at dusk">
-            </section>
-            <section class="card">
+            </a>
+            <a href="images/11.jpg" class="card">
                 <img src="images/thumbnails/11.jpg" title="views through a mountain window, looking down upon a smoky valley" alt="views through a mountain window, looking down upon a smoky valley">
-            </section>
-            <section class="card">
+            </a>
+            <a href="images/12.jpg" class="card">
                 <img src="images/thumbnails/12.jpg" title="a lavender pasture just before the base of a snowcapped mountain" alt="a lavender pasture just before the base of a snowcapped mountain">
-            </section>
+            </a>
         </main>
         <script src="js/app.js"></script>
     </body>
