downloaded min.js and min.cs files and updated index.html to get lightbox working

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Photo Gallery</title>
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/baguetteBox.min.css">
     </head>
     <body>
         <nav id="searchbar">
@@ -48,6 +49,7 @@
                 <img src="images/thumbnails/12.jpg" title="a lavender pasture just before the base of a snowcapped mountain" alt="a lavender pasture just before the base of a snowcapped mountain">
             </a>
         </main>
+        <script src="js/baguetteBox.min.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
