--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <nav id="searchbar">
-            <input type="text" id="txtBox" placeholder="Search">
+            <input type="search" name="search" id="search" placeholder="Search">
         </nav>
         <main id="grid" class="gallery">
             <a href="images/01.jpg" class="card" data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
@@ -49,6 +49,7 @@
                 <img src="images/thumbnails/12.jpg" title="a lavender pasture just before the base of a snowcapped mountain" alt="a lavender pasture just before the base of a snowcapped mountain">
             </a>
         </main>
+        <script src="js/searchFilter.js"></script>
         <script src="js/baguetteBox.min.js"></script>
         <script src="js/app.js"></script>
     </body>
