--- a/index.html
+++ b/index.html
@@ -13,40 +13,40 @@
         </nav>
         <main id="grid" class="gallery">
             <a href="images/01.jpg" class="card" data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
-                <img src="images/thumbnails/01.jpg" title="a country farm with hay bales" alt="a country farm with hay bales">
+                <img src="images/thumbnails/01.jpg" title="a country farm with hay bales" alt="a country farm with hay bales" id="1">
             </a>
             <a href="images/02.jpg" class="card" data-caption="The lake was so calm today. We had a great view of the snow on the mountains from here.">
-                <img src="images/thumbnails/02.jpg" title="a mountain lake in the springtime" alt="a mountain lake in the springtime">
+                <img src="images/thumbnails/02.jpg" title="a mountain lake in the springtime" alt="a mountain lake in the springtime" id="2">
             </a>
             <a href="images/03.jpg" class="card" data-caption="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
-                <img src="images/thumbnails/03.jpg" title="a cloudy pasture on the Irish coast" alt="a cloudy pasture on the Irish coast">
+                <img src="images/thumbnails/03.jpg" title="a cloudy pasture on the Irish coast" alt="a cloudy pasture on the Irish coast" id="3">
             </a>
             <a href="images/04.jpg" class="card" data-caption="It was amazing to see an iceberg up close, it was so cold but didn’t snow today.">
-                <img src="images/thumbnails/04.jpg" title="a glacial mountain with iceberg lake" alt="a glacial mountain with iceberg lake">
+                <img src="images/thumbnails/04.jpg" title="a glacial mountain with iceberg lake" alt="a glacial mountain with iceberg lake" id="4">
             </a>
             <a href="images/05.jpg" class="card" data-caption="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
-                <img src="images/thumbnails/05.jpg" title="a warm, desert canyon just before dusk" alt="a warm, desert canyon just before dusk">
+                <img src="images/thumbnails/05.jpg" title="a warm, desert canyon just before dusk" alt="a warm, desert canyon just before dusk" id="5">
             </a>
             <a href="images/06.jpg" class="card" data-caption="Fall is coming, I love when the leaves on the trees start to change color.">
-                <img src="images/thumbnails/06.jpg" title="a dreary, overgrown path to an abandoned gate" alt="a dreary, overgrown path to an abandoned gate">
+                <img src="images/thumbnails/06.jpg" title="a dreary, overgrown path to an abandoned gate" alt="a dreary, overgrown path to an abandoned gate" id="6">
             </a>
             <a href="images/07.jpg" class="card" data-caption="I drove past this plantation yesterday, everything is so green!">
-                <img src="images/thumbnails/07.jpg" title="a lively, green marsh with lush foliage" alt="a lively, green marsh with lush foliage">
+                <img src="images/thumbnails/07.jpg" title="a lively, green marsh with lush foliage" alt="a lively, green marsh with lush foliage" id="7">
             </a>
             <a href="images/08.jpg" class="card" data-caption="My summer vacation to the Oregon Coast. I love the sandy dunes!">
-                <img src="images/thumbnails/08.jpg" title="the hill of a beach dune that you cannot see over just yet" alt="the hill of a beach dune that you cannot see over just yet">
+                <img src="images/thumbnails/08.jpg" title="the hill of a beach dune that you cannot see over just yet" alt="the hill of a beach dune that you cannot see over just yet" id="8">
             </a>
             <a href="images/09.jpg" class="card" data-caption="We enjoyed a quiet stroll down this countryside lane.">
-                <img src="images/thumbnails/09.jpg" title="an overcast tunnel of vegetation" alt="an overcast tunnel of vegetation">
+                <img src="images/thumbnails/09.jpg" title="an overcast tunnel of vegetation" alt="an overcast tunnel of vegetation" id="9">
             </a>
             <a href="images/10.jpg" class="card" data-caption="Sunset at the coast! The sky turned a lovely shade of orange.">
-                <img src="images/thumbnails/10.jpg" title="an ocean sprayed, shoreline hill at dusk" alt="an ocean sprayed, shoreline hill at dusk">
+                <img src="images/thumbnails/10.jpg" title="an ocean sprayed, shoreline hill at dusk" alt="an ocean sprayed, shoreline hill at dusk" id="10">
             </a>
             <a href="images/11.jpg" class="card" data-caption="I did a tour of a cave today and the view of the landscape below was breathtaking.">
-                <img src="images/thumbnails/11.jpg" title="views through a mountain window, looking down upon a smoky valley" alt="views through a mountain window, looking down upon a smoky valley">
+                <img src="images/thumbnails/11.jpg" title="views through a mountain window, looking down upon a smoky valley" alt="views through a mountain window, looking down upon a smoky valley" id="11">
             </a>
             <a href="images/12.jpg" class="card" data-caption="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
-                <img src="images/thumbnails/12.jpg" title="a lavender pasture just before the base of a snowcapped mountain" alt="a lavender pasture just before the base of a snowcapped mountain">
+                <img src="images/thumbnails/12.jpg" title="a lavender pasture just before the base of a snowcapped mountain" alt="a lavender pasture just before the base of a snowcapped mountain" id="12">
             </a>
         </main>
         <script src="js/mySearchFilter.js"></script>
